--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,2 @@
-CONSTELLATION_BACKEND_URL: "http://constellation_backend_url"
-JARVIS_URL: "http://jarvis_backend_url"
+CONSTELLATION_BACKEND_URL: http://localhost:8085
+JARVIS_URL: http://localhost:8084
