LLM: Implemented parameterization of Openai models

--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -2,3 +2,5 @@ CONSTELLATION_BACKEND_URL: http://localhost:8085
 JARVIS_URL: http://localhost:8084
 LLM: NoLLM
 OPENAI_API_KEY: None
+OPENAI_MAX_TOKENS: 2000
+OPENAI_MODEL: gpt-35-turbo
