--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -1,6 +1,9 @@
 CONSTELLATION_BACKEND_URL: http://localhost:8085
 JARVIS_URL: http://localhost:8084
-LLM: NoLLM
+LLM: OpenAI
+NEO4J_PASSWORD: neo4j@prometheux
+NEO4J_URI: neo4j://localhost:7687
+NEO4J_USERNAME: neo4j
 OPENAI_API_KEY: None
 OPENAI_MAX_TOKENS: 2000
-OPENAI_MODEL: gpt-35-turbo
+OPENAI_MODEL: gpt-3.5-turbo
