--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -1,6 +1,7 @@
 CONSTELLATION_BACKEND_URL: http://localhost:8085
+JARVISPY_URL: http://localhost:5000
 JARVIS_URL: http://localhost:8084
-LLM: OpenAI
+LLM: NoNe
 NEO4J_PASSWORD: neo4j@prometheux
 NEO4J_URI: neo4j://localhost:7687
 NEO4J_USERNAME: neo4j
