--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -8,3 +8,5 @@ NEO4J_USERNAME: neo4j
 OPENAI_API_KEY: None
 OPENAI_MAX_TOKENS: 2000
 OPENAI_MODEL: gpt-3.5-turbo
+PMTX_TOKEN: token
+PMTX_URL: http://localhost:8080
