--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -2,11 +2,11 @@ CONSTELLATION_BACKEND_URL: http://localhost:8085
 JARVISPY_URL: http://localhost:5000
 JARVIS_URL: http://localhost:8084
 LLM: NoNe
-NEO4J_PASSWORD: neo4j@prometheux
+NEO4J_PASSWORD: neo4j2
 NEO4J_URI: neo4j://localhost:7687
 NEO4J_USERNAME: neo4j
 OPENAI_API_KEY: None
 OPENAI_MAX_TOKENS: 2000
 OPENAI_MODEL: gpt-3.5-turbo
-PMTX_TOKEN: token
-PMTX_URL: http://localhost:8080
+PMTX_TOKEN: MyToken
+PMTX_URL: https://engine.prometheux.ai
