GraphRAG v0 SDK side

--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -8,5 +8,7 @@ NEO4J_USERNAME: neo4j
 OPENAI_API_KEY: None
 OPENAI_MAX_TOKENS: 2000
 OPENAI_MODEL: gpt-3.5-turbo
+OPENAI_EMBEDDING_MODEL: text-embedding-3-large
+OPENAI_EMBEDDING_DIMENSIONS: 2048
 PMTX_TOKEN: MyToken
 PMTX_URL: https://engine.prometheux.ai
