--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -1,14 +1,14 @@
 CONSTELLATION_BACKEND_URL: http://localhost:8085
+EMBEDDING_DIMENSIONS: 2048
+EMBEDDING_MODEL: text-embedding-3-large
 JARVISPY_URL: http://localhost:5000
 JARVIS_URL: http://localhost:8084
 LLM: NoNe
-NEO4J_PASSWORD: neo4j2
+MAX_TOKENS: 2000
+MODEL: gpt-4o
+NEO4J_PASSWORD: neo4j@prometheux
 NEO4J_URI: neo4j://localhost:7687
 NEO4J_USERNAME: neo4j
 OPENAI_API_KEY: None
-OPENAI_MAX_TOKENS: 2000
-OPENAI_MODEL: gpt-3.5-turbo
-OPENAI_EMBEDDING_MODEL: text-embedding-3-large
-OPENAI_EMBEDDING_DIMENSIONS: 2048
 PMTX_TOKEN: MyToken
 PMTX_URL: https://engine.prometheux.ai
