Set openai as default llm provider

--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -8,7 +8,7 @@ PMTX_TOKEN: None
 # Large Language Models
 # =====================
 LLM_API_KEY: None
-LLM_PROVIDER: None
+LLM_PROVIDER: OpenAI
 LLM_VERSION: gpt-4o
 LLM_TEMPERATURE: 0.50
 LLM_MAX_TOKENS: 2000
