--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -2,7 +2,9 @@
 # Other Services
 # =====================
 JARVISPY_URL: http://localhost:5000
-PMTX_TOKEN: None
+PMTX_TOKEN: YOUR_PMTX_TOKEN
+CONSTELLATION_BACKEND_URL: http://localhost:8085
+JARVIS_URL: http://localhost:8084
 
 # =====================
 # Large Language Models
