--- a/prometheux_chain/config.yaml
+++ b/prometheux_chain/config.yaml
@@ -1,9 +1,9 @@
 # =====================
 # Other Services
 # =====================
-JARVISPY_URL: http://localhost:5000
+JARVISPY_URL: http://localhost:8000
 PMTX_TOKEN: YOUR_PMTX_TOKEN
-CONSTELLATION_BACKEND_URL: http://localhost:8085
+DATA_MANAGER_URL: http://localhost:8085
 JARVIS_URL: http://localhost:8084
 
 # =====================
